@@ -4,7 +4,7 @@
 
 
  /* File created by MIDL compiler version 8.00.0595 */
-/* at Fri Sep 20 09:59:49 2013
+/* at Fri Sep 20 11:35:04 2013
  */
 /* Compiler settings for A2F.idl:
     Oicf, W1, Zp8, env=Win32 (32b run), target_arch=X86 8.00.0595 
@@ -78,6 +78,13 @@ typedef interface IParameterCollection IParameterCollection;
 typedef interface IUnitPortEx IUnitPortEx;
 
 #endif 	/* __IUnitPortEx_FWD_DEFINED__ */
+
+
+#ifndef __IPortCollectionEx_FWD_DEFINED__
+#define __IPortCollectionEx_FWD_DEFINED__
+typedef interface IPortCollectionEx IPortCollectionEx;
+
+#endif 	/* __IPortCollectionEx_FWD_DEFINED__ */
 
 
 #ifndef __UnitOperations_FWD_DEFINED__
@@ -695,6 +702,86 @@ EXTERN_C const IID IID_IUnitPortEx;
 
 
 #endif 	/* __IUnitPortEx_INTERFACE_DEFINED__ */
+
+
+#ifndef __IPortCollectionEx_INTERFACE_DEFINED__
+#define __IPortCollectionEx_INTERFACE_DEFINED__
+
+/* interface IPortCollectionEx */
+/* [unique][nonextensible][dual][uuid][object] */ 
+
+
+EXTERN_C const IID IID_IPortCollectionEx;
+
+#if defined(__cplusplus) && !defined(CINTERFACE)
+    
+    MIDL_INTERFACE("F5DB9DA7-82AE-4386-A656-B66535B1DA6F")
+    IPortCollectionEx : public IUnknown
+    {
+    public:
+        virtual HRESULT STDMETHODCALLTYPE put_port( 
+            /* [in] */ IUnitPort *port) = 0;
+        
+    };
+    
+    
+#else 	/* C style interface */
+
+    typedef struct IPortCollectionExVtbl
+    {
+        BEGIN_INTERFACE
+        
+        HRESULT ( STDMETHODCALLTYPE *QueryInterface )( 
+            IPortCollectionEx * This,
+            /* [in] */ REFIID riid,
+            /* [annotation][iid_is][out] */ 
+            _COM_Outptr_  void **ppvObject);
+        
+        ULONG ( STDMETHODCALLTYPE *AddRef )( 
+            IPortCollectionEx * This);
+        
+        ULONG ( STDMETHODCALLTYPE *Release )( 
+            IPortCollectionEx * This);
+        
+        HRESULT ( STDMETHODCALLTYPE *put_port )( 
+            IPortCollectionEx * This,
+            /* [in] */ IUnitPort *port);
+        
+        END_INTERFACE
+    } IPortCollectionExVtbl;
+
+    interface IPortCollectionEx
+    {
+        CONST_VTBL struct IPortCollectionExVtbl *lpVtbl;
+    };
+
+    
+
+#ifdef COBJMACROS
+
+
+#define IPortCollectionEx_QueryInterface(This,riid,ppvObject)	\
+    ( (This)->lpVtbl -> QueryInterface(This,riid,ppvObject) ) 
+
+#define IPortCollectionEx_AddRef(This)	\
+    ( (This)->lpVtbl -> AddRef(This) ) 
+
+#define IPortCollectionEx_Release(This)	\
+    ( (This)->lpVtbl -> Release(This) ) 
+
+
+#define IPortCollectionEx_put_port(This,port)	\
+    ( (This)->lpVtbl -> put_port(This,port) ) 
+
+#endif /* COBJMACROS */
+
+
+#endif 	/* C style interface */
+
+
+
+
+#endif 	/* __IPortCollectionEx_INTERFACE_DEFINED__ */
 
 
 
