@@ -28,4 +28,10 @@ version 0.4
 New features:
 	+ ICapePort implemented
 	+ IUnitPortEx implemented
-	+ Code Reworked
+	+ IPortCollectionEx implemented
+	+ Code Reworked - CComPtr
+	+ no portname in Initialize
+	+ put_port in IPortCollection
+	+ one examplary port added
+	- no visible under aspen yet
+	
